# QtWFM

./: CMakeLists.txt  README.md
include/: activities.hpp  analysis.hpp  analysis_results.hpp  analysis_worker.hpp  break_plan.hpp  break_plan_results.hpp  break_plan_worker.hpp  consts.hpp  datetime.hpp  inputs.hpp  lib.hpp  msgbox.hpp  results.hpp  shift_plan.hpp  shift_plan_results.hpp  shift_plan_worker.hpp  shifts.hpp  table.hpp  trend.hpp  utils.hpp  widget.hpp
qss/: style.qss
src/: activities.cpp  analysis.cpp  analysis_results.cpp  analysis_worker.cpp  break_plan.cpp  break_plan_results.cpp  break_plan_worker.cpp  consts.cpp  datetime.cpp  inputs.cpp  main.cpp  msgbox.cpp  results.cpp  shift_plan.cpp  shift_plan_results.cpp  shift_plan_worker.cpp  shifts.cpp  table.cpp  trend.cpp  utils.cpp  widget.cpp
